syntax = "proto3";
import "google/protobuf/empty.proto";

package svc_template;
option go_package = "igs22/svc-template";

message Book {
  int64 isbn = 1;
  string title = 2;
  string author = 3;
}

message CreateBookRequest {
  int64 isbn = 1;
  string title = 2;
  string author = 3;
}

message GetBookRequest {
  int64 isbn = 1;
}

message GetBookViaAuthor {
  string author = 1;
}

message CreateBookResponse {
  string id = 1;
}

service BookService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse) {}
  rpc GetBook (GetBookRequest) returns (Book) {}
  rpc GetBooksViaAuthor (GetBookViaAuthor) returns (stream Book) {}
  rpc GetGreatestBook (stream GetBookRequest) returns (Book) {}
  rpc GetBooks (stream google.protobuf.Empty) returns (stream Book) {}
}

message BookStore {
  string name = 1;
  map<int64, string> books = 2;
}

enum EnumSample {
  option allow_alias = true;
  UNKNOWN = 0;
  STARTED = 1;
  RUNNING = 1;
}